--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Henry Shih",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
