--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "stores shoe product information",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "prod": "SET NODE_ENV=production&&nodemon src/app.js",
+    "start": "SET NODE_ENV=production&&nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Henry Shih",
