--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "start": "SET NODE_ENV=production&&nodemon src/app.js",
+    "start": "SET NODE_ENV=production&&node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Henry Shih",
