--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "start": "node src/app.js",
-    "build": "build src/app.js",
+    "start": "SET NODE_ENV=production&&node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Henry Shih",
@@ -23,7 +22,6 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
-    "netlify-lambda": "^2.0.16",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
